[gd_scene load_steps=13 format=3 uid="uid://cqk314xfnw2vj"]

[ext_resource type="Texture2D" uid="uid://ba3oowpbfc84f" path="res://Maps/Background/FirstMap/bg1.png" id="1_2jsnj"]
[ext_resource type="Script" path="res://TitleScreen/title_screen.gd" id="1_dgcnp"]
[ext_resource type="Texture2D" uid="uid://ci33lm44ctlad" path="res://TitleScreen/souls-of-the-hollow-title-sem-fundo.png" id="2_6g8vm"]
[ext_resource type="Texture2D" uid="uid://daigbuci3ths" path="res://TitleScreen/logo_gamepad_80x80.png" id="3_vhlbo"]

[sub_resource type="Animation" id="Animation_vgybu"]
resource_name = "PiscaVermeio"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2, 3.5, 5.1, 6.1, 7.1, 9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.498039), Color(1, 0, 0, 1), Color(0.639216, 0, 0, 1), Color(0.858824, 0, 0, 1), Color(0.592157, 0, 0, 1), Color(0.67539, 0, 0, 0.897559), Color(0.835294, 0, 0, 0.701961), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dnka8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.498039)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_veil2"]
_data = {
"PiscaVermeio": SubResource("Animation_vgybu"),
"RESET": SubResource("Animation_dnka8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3guk2"]
size = Vector2(126, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xatsm"]
size = Vector2(126, 36)

[sub_resource type="Animation" id="Animation_fvjsp"]
resource_name = "LogoLegal"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_tcrr3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_alsib"]
_data = {
"LogoLegal": SubResource("Animation_fvjsp"),
"RESET": SubResource("Animation_tcrr3")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_dgcnp")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(568, 302)
scale = Vector2(3.97396, 3.46759)
texture = ExtResource("1_2jsnj")
flip_v = true

[node name="Title" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Title"]
modulate = Color(1, 0, 0, 0.498039)
position = Vector2(567, 106)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_6g8vm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "PiscaVermeio"
libraries = {
"": SubResource("AnimationLibrary_veil2")
}

[node name="Buttons" type="Node2D" parent="."]

[node name="StartGame" type="TextureButton" parent="Buttons"]
offset_left = 510.0
offset_top = 214.0
offset_right = 636.0
offset_bottom = 250.0

[node name="StartGameColor" type="ColorRect" parent="Buttons/StartGame"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 36.0

[node name="StartGameLabel" type="Label" parent="Buttons/StartGame"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 19.0
offset_top = 6.0
offset_right = 105.0
offset_bottom = 32.0
text = "Iniciar Jogo"

[node name="StartTouchScreen" type="TouchScreenButton" parent="Buttons/StartGame"]
position = Vector2(63, 18)
shape = SubResource("RectangleShape2D_3guk2")

[node name="Instructions" type="TextureButton" parent="Buttons"]
offset_left = 510.0
offset_top = 263.0
offset_right = 636.0
offset_bottom = 299.0

[node name="InstructionsColor" type="ColorRect" parent="Buttons/Instructions"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 36.0

[node name="InstructionsLabel" type="Label" parent="Buttons/Instructions"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 21.0
offset_top = 6.0
offset_right = 107.0
offset_bottom = 32.0
text = "Instruções"

[node name="InstructionTouchScreen" type="TouchScreenButton" parent="Buttons/Instructions"]
position = Vector2(63, 18)
shape = SubResource("RectangleShape2D_xatsm")

[node name="Credits" type="TextureButton" parent="Buttons"]
offset_left = 510.0
offset_top = 312.0
offset_right = 636.0
offset_bottom = 348.0

[node name="CreditsColor" type="ColorRect" parent="Buttons/Credits"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 36.0

[node name="CreditsLabel" type="Label" parent="Buttons/Credits"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 30.0
offset_top = 6.0
offset_right = 116.0
offset_bottom = 32.0
text = "Créditos"

[node name="CreditsTouchScreen" type="TouchScreenButton" parent="Buttons/Credits"]
position = Vector2(63, 18)
shape = SubResource("RectangleShape2D_xatsm")

[node name="ExitGame" type="TextureButton" parent="Buttons"]
offset_left = 510.0
offset_top = 361.0
offset_right = 636.0
offset_bottom = 397.0

[node name="ExitGameColor" type="ColorRect" parent="Buttons/ExitGame"]
layout_mode = 0
offset_right = 126.0
offset_bottom = 36.0

[node name="ExitGamesLabel" type="Label" parent="Buttons/ExitGame"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 19.0
offset_top = 6.0
offset_right = 110.0
offset_bottom = 32.0
text = "Sair do jogo"

[node name="ExitGameTouchScreen" type="TouchScreenButton" parent="Buttons/ExitGame"]
position = Vector2(63, 18)
shape = SubResource("RectangleShape2D_xatsm")

[node name="UTFPRLOGO" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="UTFPRLOGO"]
position = Vector2(574, 561)
texture = ExtResource("3_vhlbo")
hframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UTFPRLOGO"]
autoplay = "LogoLegal"
libraries = {
"": SubResource("AnimationLibrary_alsib")
}

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Buttons/StartGame/StartTouchScreen" to="." method="_on_start_touch_screen_pressed"]
[connection signal="pressed" from="Buttons/Instructions/InstructionTouchScreen" to="." method="_on_instruction_touch_screen_pressed"]
[connection signal="pressed" from="Buttons/Credits/CreditsTouchScreen" to="." method="_on_credits_touch_screen_pressed"]
[connection signal="pressed" from="Buttons/ExitGame/ExitGameTouchScreen" to="." method="_on_exit_game_touch_screen_pressed"]
